--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
 </head>
 <body> 
-<?php 
-	echo oi;
-?>
+
 <!--header-->	
 <div class="header" >
 	<div class="header-top">
@@ -284,5 +282,9 @@
 					<p>Copyright © 2013 G4 Virtual Tecnologia - Todos os direitos reservados</p>
 		</div>
 	</div>
+<?php 
+	echo "oi";
+?>
 </body>
+
 </html>
