--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <meta name="description" content="G4 Virtual - Home">
 <meta name="keywords" content="G4 Virtual,Home,Destaque,Soluções">
+<meta name=viewport content="initial-scale=1">
 
 <title>G4 Virtual - Home</title>
 
