--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="description" content="G4 Virtual - Home">
 <meta name="keywords" content="G4 Virtual,Home,Destaque,Soluções">
-
+<meta name="viewport" content="width=380, initial-scale=0.5">
 <meta http-equiv="cache-control" content="public" >
 
 <title>G4 Virtual - Home</title>
