--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
 <title>G4 Virtual - Home</title>
 
-
+<meta name=viewport content="width=device-width, initial-scale=1">
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" /> -->
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+
+
+<script  async src="js/jquery.min.js"></script>
+
+<script  async type="text/javascript" src="js/jquery.flexslider.js"></script>
 <!-- <script type="text/javascript" src="js/js.js"></script> -->
 
 
@@ -280,12 +286,5 @@
 	</div>
 
 </body>
-
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-
-
-<script  async src="js/jquery.min.js"></script>
-
-<script  async type="text/javascript" src="js/jquery.flexslider.js"></script>
 
 </html>
