--- a/test.html
+++ b/test.html
@@ -1,8 +1,13 @@
 <html>
 <head>
 	<title>lixo</title>
+	<style type="text/css">
+		p{
+			font-size: 5em;
+		}
+	</style>
 </head>
 <body>
-	Test
+	<p>Test</p>
 </body>
 </html>
