--- a/test.html
+++ b/test.html
@@ -3,11 +3,17 @@
 	<title>lixo</title>
 	<style type="text/css">
 		p{
-			font-size: 78px;
+			width: 95%;
+			border: 1px solid red;
+			font-size: 100px;
+			font-family: "Arial";
+			margin-left: auto; 
+			margin-right: auto; 
 		}
+
 	</style>
 </head>
 <body>
-	<p>Test</p>
+	<p>Teste</p>
 </body>
 </html>
