--- a/test.html
+++ b/test.html
@@ -1,5 +1,7 @@
+<!DOCYTIPE html>
 <html>
 <head>
+	<meta name=viewport content="width=device-width, initial-scale=1">
 	<title>lixo</title>
 	<style type="text/css">
 		p{
