--- a/test.html
+++ b/test.html
@@ -5,26 +5,7 @@
 	<title>lixo</title>
 	<style type="text/css">
 			
-			.container{
-				border: 1px solid green;
-				width: 100%;
-				overflow: hidden;
-			}
-			.main{
-				width: 95%;
-				padding: 10px;
-				border: 1px solid red;
-				/*float: left;*/
-				overflow: hidden;
-			}
-
-			.son1,
-			.son2{
-				width: 100px;
-				height: 980px;
-				border: 1px solid green;
-				float: left;
-			}
+			
 	</style>
 </head>
 <body>
@@ -34,7 +15,7 @@
 					<p>asd</p>
 				</div>
 				<div class="son2">
-
+						<img src="images/casa.gif" alt="Casa" title="Casa" />
 				</div>
 		</div>
 	</div>
