--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 					<p>asd</p>
 				</div>
 				<div class="son2">
-						<img src="images/casa.gif" alt="Casa" title="Casa" />
+						<img src="images/casa.gif" alt="Casa" title="Casa Propia" />
 				</div>
 		</div>
 	</div>
