--- a/test.html
+++ b/test.html
@@ -4,7 +4,24 @@
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<title>lixo</title>
 	<style type="text/css">
-			
+			*{
+				font-family: "Arial";
+				font-size: 1em;
+			}
+
+			.son1,.son2{
+				border: solid 1px red;
+				padding: 0.2em;
+				font-size: 3em;
+			}
+			img{
+				border: solid 1px green;
+				width: 3em;
+			}
+			p{
+				border: solid 1px yellow;
+				margin: 0.25em;
+			}
 			
 	</style>
 </head>
@@ -12,7 +29,7 @@
 	<div class="container">
 		<div class="main">
 				<div class="son1">
-					<p>asd</p>
+					<p>Casa</p>
 				</div>
 				<div class="son2">
 						<img src="images/casa.gif" alt="Casa" title="Casa Propia" />
