--- a/clientes.html
+++ b/clientes.html
@@ -148,7 +148,7 @@
 						<li><a  href="empresa.html" >Empresa</a></li>
 						<li><a  href="solucoes.html"  >Soluções</a></li>
 						<li><a  href="clientes.html" >Clientes</a></li>
-						<li><a  href="contact.html" >Contato</a></li>
+						<li><a  href="contato.html" >Contato</a></li>
 						
 			</ul>
 					<p>Copyright © 2013 G4 Virtual Tecnologia - Todos os direitos reservados</p>
