--- a/erp.html
+++ b/erp.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - ERP">
-<meta name="keywords" content="G4 Virtual,Solucoes,ERP,SAP,MMQ,VS">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Solucoes,ERP,SAP,MMQ,VS">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
