--- a/cftv.html
+++ b/cftv.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - CFTV">
-<meta name="keywords" content="G4 Virtual,Solucoes,CFTV,Empresas,Residencia,Condominio">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Solucoes,CFTV,Empresas,Residencia,Condominio">
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" /> -->
