--- a/clientes.html
+++ b/clientes.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - Clientes">
-<meta name="keywords" content="G4 Virtual,Clientes,Parcerias">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Clientes,Parcerias">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
