--- a/empresa.html
+++ b/empresa.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - Empresa">
-<meta name="keywords" content="G4 Virtual,Empresa,Historia,Visao">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Empresa,Historia,Visao">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
