--- a/sd.html
+++ b/sd.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - Service Desk">
-<meta name="keywords" content="G4 Virtual,Solucoes,Service Desk,Field Service,Help Desk,Atendimento">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Solucoes,Service Desk,Field Service,Help Desk,Atendimento">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
