--- a/solucoes.html
+++ b/solucoes.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - Solucoes">
-<meta name="keywords" content="G4 Virtual,Solucoes,Escritorio Virtual,Service Desk,ERP,CFTV,Telefonia IP">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Solucoes,Escritorio Virtual,Service Desk,ERP,CFTV,Telefonia IP">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
