--- a/tf.html
+++ b/tf.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Alexandre,Caio,Cleyton,Henrique,Jose">
 
 <meta name="description" content="G4 Virtual - Telefonia IP">
-<meta name="keywords" content="G4 Virtual,Solucoes,Telefonia IP,Algoritimos,Utilidade,Confiabilidade">
+<meta name="keywords" content="G4 Virtual,Guarulhos,São Paulo,Solucoes,Telefonia IP,Algoritimos,Utilidade,Confiabilidade">
 
 
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
