--- a/kiko/index.html
+++ b/kiko/index.html
@@ -371,7 +371,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="http://www.sp.senac.br/" target="_blank">
-                        <img src="img/logos/senac.jpg" class="img-responsive img-centered" alt="Senac">
+                        <img src="img/logos/senac.jpg" class="img-responsive img-centered" title="Senac a melhor do BRASIL" alt="Senac">
                     </a>
                 </div>
                 <!-- <div class="col-md-3 col-sm-6">
