--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 	<script type="text/javascript" src="praias.js"></script>
 	
 	<script type="text/javascript">
-		var urlBase = "http://api.worldweatheronline.com/free/v1/";
-		var url = "http://api.worldweatheronline.com/free/v1/marine.ashx?key=d7pesx54engabthjcznhanfa&format=json&q=";
+		var urlBase = "http://api.worldweatheronline.com/premium/v1/";
+		var url = "http://api.worldweatheronline.com/premium/v1/marine.ashx?key=f2ae69adff674902a3c13610160504&format=json&q=";
+		var key = "f2ae69adff674902a3c13610160504";
 
 		var app = angular.module("noSurf", []);
 		
@@ -90,7 +91,7 @@
 					if(praia != null){
 						$http({
 							method: "GET",
-							url: urlBase+ "marine.ashx?key=d7pesx54engabthjcznhanfa&format=json&q=" + praia.lat +"," + praia.lon
+							url: urlBase+ "marine.ashx?key="+key+"&format=json&q=" + praia.lat +"," + praia.lon
 						}).then(function(data){
 							console.log(data);
 							$scope.result = data.data.data;
@@ -135,9 +136,9 @@
 			<div class="row">
 				<div class="col-md-12">
 					<table class="table">
-						<tr >
-							<td>Teperatura</td>
-							<td>{{result.weather[0].hourly[0].tempC}}</td>
+						<tr ng-repeat="(key,value) in result">
+							<td>{{key}}</td>
+							<td>{{value}}</td>
 						</tr>
 					</table>
 				</div>
