--- a/index.html
+++ b/index.html
@@ -338,6 +338,16 @@
                
             </table>
          </div>
+         <div class="col-md-6">
+         	<table class="table">
+         		<tr>
+         			<td>Vento</td>
+         			<td>
+         				<span class="glyphicon glyphicon-arrow-up" style="transform:rotate({{atualMarine.winddirDegree}}deg)" title="{{atualMarine.winddir16Point}}"></span>
+         			</td>
+         		</tr>
+         	</table>
+         </div>
       </div>
       <div class="row">
          <div class="col-md-6"  ng-repeat="item in resultMarine.weather">
@@ -376,7 +386,8 @@
          </div>
       </div>
       <div class="row">
-         <div class="col-md-12">
+         <div class="col-md-6">
+         	
          </div>
       </div>
    </div>
