--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
 <div class="site-overlay"></div>
 
-<div class="container push" style="position:relative">
+<div class="container " style="position:relative">
 <div class="row">
    <div class="col-md-4 col-sm-4">
     <div class="menu-btn">
