--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
         <button class="menu-btn btn btn-primary">
             &#9776; Menu
         </button>
+        <img src="http://cdn.worldweatheronline.net/images/wsymbols01_png_64/wsymbol_0008_clear_sky_night.png" />
     </div>
     <br />  
    </div>
@@ -545,6 +546,7 @@
          </tr>
       </table>
    </div>
+
 </div>
 <script src="resources/lib/pushy/js/pushy.js" ></script>
 <script type="text/javascript">
