--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
 <div class="site-overlay"></div>
 
-<div class="container" style="position:relative" >
+<div class="container push" style="position:relative" >
 {{swipedLeft}}
 <div class="row">
    <div class="col-md-12 col-sm-12" style="position:relative; overflow: auto;">
