--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
 
 <div class="site-overlay"></div>
 
-<div class="container" style="position:relative" >
+<div class="container push" style="position:relative" >
 {{swipedLeft}}
 <div class="row">
    <div class="col-md-12 col-sm-12" style="position:relative; overflow: auto;">
     <br />  
     <div>
-        <button class="menu-btn btn btn-primary">
-            &#9776; Menu
+        <button class="menu-btn btn btn-primary" style="font-size: 2em;">
+            &#9776;
         </button>
         <img src="http://cdn.worldweatheronline.net/images/wsymbols01_png_64/wsymbol_0008_clear_sky_night.png" />
     </div>
