--- a/test.html
+++ b/test.html
@@ -28,21 +28,21 @@
             body{
                 background-color: black;
                 position: relative;
-                overflow: hidden;
+                overflow-x: hidden;
             }
             .menu{
-                width: 300px;
+                width: 60%;
                 height: 100%;
                 top: 0;
                 left: 0;
                 position: absolute;
                 transition: linear all .5s;
-                background-color: red;
                 
             }
             .conteudo{
                 transition: linear all 0.5s;
                 background-color: gray;
+                position: relative;
 
             }
             .conteudo * div{
@@ -53,18 +53,20 @@
                 //transform: translate(-100px);
                 z-index: -10;
                 width: 0;
-                height: 100%;
+                //height: 100%;
                 opacity: 0;
                 //overflow: hidden;
             }
             .menu-show{
-                transform: translate(-300px);
+                /*transform: translate(-100%);*/
+                margin-left: -60%;
                 z-index: 100;
+                height: 100%;
             }
             
 
             .conteudo-hide{
-                transform: translate(300px);
+                transform: translate(60%);
             }
 
         </style>
@@ -100,6 +102,93 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
+                <div class="col-md-6 col-md-offset-3">asdsa</div>
                 <div class="col-md-6 col-md-offset-3">asdsa</div>
                 <div class="col-md-6 col-md-offset-3">asdsa</div>
                 <div class="col-md-6 col-md-offset-3">asdsa</div>
