--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@
                 document.getElementsByTagName('body')[0].classList.toggle('menu-closed');
             }
             document.getElementsByClassName('over-layer')[0].onclick = toggleMenu;
+            toggleMenu();
         </script>
     </body>
 </html>
