--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <script src="resources/js/filters/filters.js" ></script>
         <script type="text/javascript" src="resources/js/controllers/noSurfCtrl.js"></script>
 
+
     </head>
     <body ng-controller="noSurfCtrl" class="menu-closed">
         <div class="loading" ng-show="loading">
@@ -279,7 +280,13 @@
                             </td>
                         </tr>
                     </table>
+                    <br />
+                    <div id="map"></div>
+
                 </div>
+
+
+
                 <br />
             </div>
             <div class="row" ng-show="atualMarine">
@@ -366,5 +373,19 @@
             document.getElementsByClassName('over-layer')[0].onclick = toggleMenu;
             toggleMenu();
         </script>
+        <script type="text/javascript">
+            var map;
+            function initMap(lat, lng) {
+
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: lat, lng: lng},
+                    scrollwheel: false,
+                    zoom: 8
+                });
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTbk54QQ8sHvqi0QhZ0HAAoQa_pllO4Co&callback=initMap"
+        async defer></script>
+
     </body>
 </html>
